--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -11,6 +11,7 @@
         selection={prefillSelection}
         onsearch={handleSearch}
         onselectionchange={handleSelectionChange}
+        disabled={disabled}
       >
       </c-lookup>
     </lightning-layout-item>
@@ -24,6 +25,7 @@
         step="0.01"
         min="0"
         variant="label-hidden"
+        disabled={disabled}
       ></lightning-input>
     </lightning-layout-item>
     <!-- percent layout item -->
@@ -37,6 +39,7 @@
             step="0.0001"
             variant="label-hidden"
             class="percent-field"
+            disabled={disabled}
           ></lightning-input>
         </div>
         <div
@@ -52,6 +55,7 @@
         variant="destructive"
         label="Delete"
         onclick={handleDelete}
+        disabled={disabled}
       ></lightning-button>
     </lightning-layout-item>
     <!-- div used to reserve room for error messages below inputs-->
