--- a/force-app/main/default/lwc/warningBanner/warningBanner.html
+++ b/force-app/main/default/lwc/warningBanner/warningBanner.html
@@ -1,54 +1,50 @@
 <template>
-  <template if:true={warning}>
-    <div
-      class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_warning"
-      role="alert"
-    >
-      <span class="slds-assistive-text">warning</span>
-      <span
-        class="slds-icon_container slds-icon-utility-warning slds-m-right_x-small"
-        title="Description of icon when needed"
-      >
-        <lightning-icon
-          icon-name="utility:warning"
-          alternative-text="Warning!"
-          variant="warning"
-          size="x-small"
-        ></lightning-icon>
-      </span>
-      <h2>
-        {message}
-      </h2>
-    </div>
-  </template>
-  <template if:true={info}>
-    <div
-      class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info"
-      role="alert"
-    >
-      <span class="slds-assistive-text">info</span>
-      <span
-        class="slds-icon_container slds-icon-utility-user slds-m-right_x-small"
-        title="Description of icon when needed"
-      >
-        <lightning-icon
-          icon-name="utility:announcement"
-          alternative-text="Information"
-          variant="inverse"
-          size="x-small"
-        ></lightning-icon>
-      </span>
-      <h2>
-        {message}
-      </h2>
-      <lightning-icon
-        icon-name="utility:close"
-        alternative-text="close"
-        variant="inverse"
-        size="x-small"
-        class="slds-notify__close"
-        onclick={handleClose}
-      ></lightning-icon>
-    </div>
-  </template>
+    <template if:true={warning}>
+        <div
+            class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_warning"
+            role="alert"
+        >
+            <span class="slds-assistive-text">{labels.warning.assistiveText}</span>
+            <span
+                class="slds-icon_container slds-icon-utility-warning slds-m-right_x-small"
+                title={labels.warning.title}
+            >
+                <lightning-icon
+                    icon-name="utility:warning"
+                    alternative-text={labels.warning.icon.alternativeText}
+                    variant="warning"
+                    size="x-small"
+                ></lightning-icon>
+            </span>
+            <h2>{message}</h2>
+        </div>
+    </template>
+    <template if:true={info}>
+        <div
+            class="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info"
+            role="alert"
+        >
+            <span class="slds-assistive-text">{labels.info.assistiveText}</span>
+            <span
+                class="slds-icon_container slds-icon-utility-user slds-m-right_x-small"
+                title={labels.info.title}
+            >
+                <lightning-icon
+                    icon-name="utility:announcement"
+                    alternative-text={labels.info.icon.alternativeText}
+                    variant="inverse"
+                    size="x-small"
+                ></lightning-icon>
+            </span>
+            <h2>{message}</h2>
+            <lightning-icon
+                icon-name="utility:close"
+                alternative-text={labels.close.icon.alternativeText}
+                variant="inverse"
+                size="x-small"
+                class="slds-notify__close"
+                onclick={handleClose}
+            ></lightning-icon>
+        </div>
+    </template>
 </template>
