--- a/force-app/main/default/lwc/manageExpendituresTableHeader/manageExpendituresTableHeader.html
+++ b/force-app/main/default/lwc/manageExpendituresTableHeader/manageExpendituresTableHeader.html
@@ -4,19 +4,19 @@
             <lightning-layout-item size="7" padding="horizontal-small">
                 <div
                     class="slds-truncate slds-text-title_caps"
-                    title="General Accounting Unit"
+                    title={labels.generalAccountingUnit}
                 >
-                    <b>General Accounting Unit</b>
+                    <b>{labels.generalAccountingUnit}</b>
                 </div>
             </lightning-layout-item>
             <lightning-layout-item size="2" padding="horizontal-small">
-                <div class="slds-truncate slds-text-title_caps" title="Amount">
-                    <b>Amount</b>
+                <div class="slds-truncate slds-text-title_caps" title={labels.amount}>
+                    <b>{labels.amount}</b>
                 </div>
             </lightning-layout-item>
             <lightning-layout-item size="3" padding="horizontal-small">
-                <div class="slds-truncate slds-text-title_caps" title="Percent">
-                    <b>Percent</b>
+                <div class="slds-truncate slds-text-title_caps" title={labels.percent}>
+                    <b>{labels.percent}</b>
                 </div>
             </lightning-layout-item>
         </lightning-layout>
