--- a/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
+++ b/force-app/main/default/lwc/gauExpenditureRow/gauExpenditureRow.html
@@ -45,7 +45,7 @@
                 <div
                     class="slds-col slds-shrink slds-text-title_caps custom-percent-style"
                 >
-                    %
+                    {labels.percentSign}
                 </div>
             </div>
         </lightning-layout-item>
@@ -53,7 +53,7 @@
         <lightning-layout-item padding="horizontal-small" size="1">
             <lightning-button
                 variant="destructive"
-                label="Delete"
+                label={labels.buttons.delete}
                 onclick={handleDelete}
                 disabled={disabled}
             ></lightning-button>
