Enforce LWC Jest code coverage
- Enforces 100% LWC Jest code coverage among all measures except for the following block list:
    - `gauExpenditureRow`
    - `lookup`
    - `manageExpenditures`
    - `manageExpendituresTableHeader`
- We needed at least one test at 100% code coverage, so fully tested warningBanner.
    - For a11y, needed to change to only render `<h2>{message}</h2>` if there is a message.  Else, empty headers is not allowed.
    - warningBanner does not yet support translations.  Exported English labels so test can assert the proper labels are used.
- Updated `package.json` name to follow proper naming convention.

--- a/force-app/main/default/lwc/warningBanner/warningBanner.html
+++ b/force-app/main/default/lwc/warningBanner/warningBanner.html
@@ -16,7 +16,9 @@
                     size="x-small"
                 ></lightning-icon>
             </span>
-            <h2>{message}</h2>
+            <template if:true={message}>
+                <h2>{message}</h2>
+            </template>
         </div>
     </template>
     <template if:true={info}>
@@ -36,7 +38,9 @@
                     size="x-small"
                 ></lightning-icon>
             </span>
-            <h2>{message}</h2>
+            <template if:true={message}>
+                <h2>{message}</h2>
+            </template>
             <lightning-icon
                 icon-name="utility:close"
                 alternative-text={labels.close.icon.alternativeText}
